# allie-cat-keeb-vial

./: .clauderc  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Doxyfile  ISSUES_TO_CREATE.md  Makefile  POINTING_DEVICE.md  POINTING_DEVICE_README.md  build.py  build_all.py  build_lily.py  build_my_keyboards.py  holykeebs_core_changes.txt  mkdocs.yml  nose2.cfg  package-lock.json  package.json  prepare_release.sh  pyproject.toml  qmk.json  readme.md  requirements-dev.txt  requirements.txt  squash_commits.sh  variants.json
.claude/: QUICKREF.md  README.md  SETUP_SUMMARY.md
.claude/commands/: build-custom.md  build-info.md  build.md  check.md  clean.md  info.md  release.md  setup-env.md  test.md
.claude/prompts/: add-device-config.md  contributing.md  fix-build-errors.md  optimize-size.md
.cursor/: background.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  branch-protection.json  cliff.toml  copilot-instructions.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/workflows/: build-firmware.yml  build.yml  changelog.yml  copilot-setup-steps.yml  dependabot-auto-merge.yml  docs.yml  pr-assistant.yml  pr-checks.yml  quick-tests.yml  (+4 more)
build_lily/: commands.txt
builddefs/: common_features.mk  via.mk  vial.mk
docs/: CONTRIBUTING.md  cli.md  cli_development.md  codex.md  index.md  newbs_getting_started.md
quantum/: dynamic_keymap.c  qmk_settings.c  qmk_settings.h
scripts/: generate-docs.js  init_submodules.sh  upstream-sync.sh
test/: unity.mk
tests/: Makefile  keymatrix_test.c  test_build_py.py
tools/: callgraph.py  draw_keymaps.py
(+94 files in other folders)
