[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "allie-cat-keeb"
version = "0.1.0"
description = "Vial-enabled QMK firmware"
dependencies = [
    "argcomplete",
    "colorama",
    "dotty-dict",
    "hid",
    "hjson",
    "jsonschema>=4",
    "milc>=1.4.2",
    "pygments",
    "pyserial",
    "pyusb",
    "pillow",
    "qmk",
]

[project.optional-dependencies]
 dev = [
    "nose2",
    "flake8",
    "pep8-naming",
    "pyflakes",
    "yapf",
 ]
